[package]
name = "kalosm-vision"
version = "0.4.0"
edition = "2021"
description = "A set of pretrained vision models "
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
keywords = ["ai", "segment-anything"]

[dependencies]
image.workspace = true
segment-anything-rs.workspace = true

[dev-dependencies]
kalosm = { workspace = true, features = ["vision"], default-features = true }
tokio = { version = "1", features = ["full"] }
