[package]
name = "kalosm"
edition = "2021"
version = "0.4.0"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
description = "A simple interface for pretrained AI models "
keywords = ["llm", "llama", "whisper", "ocr", "nlp"]
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"
autoexamples = false

[dependencies]
comfy-table = { version = "7.1.0", optional = true }
futures-util = "0.3.28"
hdrhistogram = { version = "7.5.4", optional = true }
thiserror = { workspace = true, optional = true }
rand = { version = "0.8.5", optional = true }
arroy = { version = "0.6.0", optional = true }

[dependencies.kalosm-model-types]
version = "0.4.0"
path = "../kalosm-model-types"
optional = true
features = []

[dependencies.kalosm-common]
version = "0.4.0"
path = "../kalosm-common"
optional = true
features = []

[dependencies.kalosm-language]
features = []
optional = true
workspace = true
default-features = false

[dependencies.kalosm-sound]
features = []
optional = true
workspace = true
default-features = false

[dependencies.kalosm-streams]
features = []
workspace = true

[dependencies.kalosm-vision]
features = []
optional = true
workspace = true
default-features = false

[dependencies.serde]
version = "1.0.163"
features = ["derive"]

[dependencies.surrealdb]
version = "2.4.0"
optional = true
default-features = false

[dependencies.heed]
version = "0.22"
optional = true

[dependencies.tracing]
version = "0.1.40"
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
full = ["bert", "llama", "vision", "sound", "sound-denoise", "surrealdb"]
cuda = [
    "kalosm-language?/cublas",
    "kalosm-vision?/cublas",
]
mkl = ["kalosm-language?/mkl", "kalosm-vision?/mkl"]
language = [
    "dep:kalosm-language",
    "dep:hdrhistogram",
    "dep:kalosm-model-types",
    "dep:comfy-table",
]
bert = ["language", "kalosm-language/bert", "dep:kalosm-common"]
llama = ["language", "kalosm-language/llama", "dep:kalosm-common"]
prompt_annealing = ["bert", "dep:rand", "dep:thiserror", "dep:tracing"]
metal = [
    "kalosm-language?/metal",
    "kalosm-vision?/metal",
]
sound = ["dep:kalosm-sound"]
sound-denoise = ["sound", "kalosm-sound/denoise"]
sound-source = ["sound", "kalosm-sound/source"]
sound-voice-detection = ["sound", "kalosm-sound/voice-detection"]
surrealdb = ["bert", "dep:surrealdb", "dep:heed", "dep:arroy", "dep:thiserror"]
surrealdb-local = ["surrealdb", "surrealdb/kv-mem", "surrealdb/kv-surrealkv"]
vision = ["dep:kalosm-vision"]
openai = ["language", "kalosm-language/openai"]
anthropic = ["language", "kalosm-language/anthropic"]
remote = ["openai", "anthropic"]
scrape = ["language", "kalosm-language/scrape"]
tokio = [
    "kalosm-common?/tokio",
    "kalosm-language?/tokio",
    "kalosm-sound?/tokio",
    "kalosm-vision?/tokio",
]

[[example]]
name = "chat"
required-features = ["llama"]

[[test]]
name = "hybrid_test"
required-features = ["surrealdb-local"]

[package.metadata.docs.rs]
# Features to pass to Cargo
features = ["full", "openai", "anthropic", "scrape"]
