[package]
name = "kalosm"
edition = "2021"
version = "0.4.0"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
description = "A simple interface for pretrained AI models "
keywords = ["llm", "llama", "whisper", "ocr", "nlp"]
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"
autoexamples = false

[dependencies]
comfy-table = { version = "7.1.0", optional = true }
futures-util = "0.3.28"
hdrhistogram = { version = "7.5.4", optional = true }
thiserror = { workspace = true, optional = true }
rand = { version = "0.8.5", optional = true }
arroy = { version = "0.6.0", optional = true }

[dependencies.kalosm-model-types]
version = "0.4.0"
path = "../kalosm-model-types"
optional = true
features = []

[dependencies.kalosm-language-model]
version = "0.4.0"
path = "../language-model"
optional = true
features = []

[dependencies.kalosm-language]
features = []
optional = true
workspace = true
default-features = false

[dependencies.kalosm-llama]
features = []
optional = true
workspace = true

[dependencies.rbert]
features = []
optional = true
workspace = true

[dependencies.kalosm-sample]
features = []
optional = true
workspace = true

[dependencies.kalosm-sound]
features = []
optional = true
workspace = true
default-features = false

[dependencies.kalosm-streams]
features = []
workspace = true

[dependencies.kalosm-vision]
features = []
optional = true
workspace = true
default-features = false

[dependencies.serde]
version = "1.0.163"
features = ["derive"]
optional = true

[dependencies.surrealdb]
version = "2.4.0"
optional = true
default-features = false

[dependencies.heed]
version = "0.22"
optional = true

[dependencies.tracing]
version = "0.1.40"
optional = true

[dev-dependencies]
pollster = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
full = [
    "bert",
    "llama-vision",
    "hf-tokenizer-json",
    "structured",
    "vision",
    "sound",
    "sound-denoise",
    "surrealdb",
]
cuda = [
    "kalosm-language?/cublas",
    "kalosm-vision?/cublas",
]
mkl = ["kalosm-language?/mkl", "kalosm-vision?/mkl"]
language = [
    "dep:kalosm-model-types",
    "dep:kalosm-language-model",
    "kalosm-language-model/serde",
]
structured = [
    "language",
    "dep:kalosm-sample",
    "kalosm-language-model/structured",
    "kalosm-llama?/structured",
]
bert = ["language", "dep:rbert"]
llama = ["language", "dep:kalosm-llama"]
hf-tokenizer-json = ["kalosm-llama?/hf-tokenizer-json"]
llama-vision = ["llama", "kalosm-llama/vision"]
documents = ["language", "dep:kalosm-language", "kalosm-language/documents"]
fs-documents = ["documents", "kalosm-language/fs-documents"]
web-documents = ["documents", "kalosm-language/web-documents"]
chunking = ["documents", "kalosm-language/chunking"]
vector-db = ["documents", "kalosm-language/vector-db"]
rag = ["web-documents", "chunking", "vector-db"]
evaluation = ["language", "dep:comfy-table", "dep:hdrhistogram"]
prompt_annealing = ["bert", "evaluation", "dep:rand", "dep:thiserror", "dep:tracing"]
metal = [
    "kalosm-language?/metal",
    "kalosm-vision?/metal",
]
sound = ["dep:kalosm-sound"]
sound-denoise = ["sound", "kalosm-sound/denoise"]
sound-source = ["sound", "kalosm-sound/source"]
sound-voice-detection = ["sound", "kalosm-sound/voice-detection"]
surrealdb = [
    "bert",
    "rag",
    "dep:surrealdb",
    "dep:heed",
    "dep:arroy",
    "dep:thiserror",
    "dep:serde",
]
surrealdb-local = ["surrealdb", "surrealdb/kv-mem", "surrealdb/kv-surrealkv"]
vision = ["dep:kalosm-vision"]
openai = ["language", "kalosm-language-model/openai"]
anthropic = ["language", "kalosm-language-model/anthropic"]
remote = ["openai", "anthropic"]
scrape = ["language", "dep:kalosm-language", "kalosm-language/scrape"]
tokio = [
    "kalosm-language?/tokio",
]

[[example]]
name = "chat"
required-features = ["llama"]

[[test]]
name = "hybrid_test"
required-features = ["surrealdb-local"]

[package.metadata.docs.rs]
# Features to pass to Cargo
features = ["full", "openai", "anthropic", "scrape"]
