[package]
name = "kalosm-language-model"
version = "0.4.1"
edition = "2021"
description = "A common interface for language models/transformers "
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
keywords = ["ai", "llm", "llama", "mistral", "nlp"]

[dependencies]
futures-util = "0.3.28"
futures-channel = "0.3.31"
serde = { version = "1.0.163", features = ["derive"], optional = true }
tracing = "0.1.37"
kalosm-sample = { workspace = true, optional = true }
kalosm-model-types.workspace = true
thiserror = { workspace = true, optional = true }
lru = { version = "0.12.3", optional = true }
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
], optional = true }
serde_json = { version = "1.0.134", optional = true }
reqwest-eventsource = { version = "0.6.0", optional = true }
async-lock = "3.4.0"
base64 = { version = "0.22.1", optional = true }
image = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1.28.1", features = ["full"] }
kalosm = { workspace = true, features = ["language", "openai", "anthropic"], default-features = true }
kalosm-learning = { workspace = true }
kalosm-common = { workspace = true }
pretty_assertions = "1.4.1"
postcard = { version = "1.0.8", features = ["use-std"] }
anyhow = { workspace = true }
tracing-subscriber = "0.3.19"

[features]
default = ["serde"]
anthropic = [
    "serde",
    "dep:reqwest",
    "dep:serde_json",
    "dep:reqwest-eventsource",
    "dep:base64",
    "dep:thiserror",
]
openai = [
    "serde",
    "dep:reqwest",
    "dep:serde_json",
    "dep:reqwest-eventsource",
    "dep:base64",
    "dep:thiserror",
]
remote = ["anthropic", "openai"]
serde = ["dep:serde"]
cache = ["serde", "dep:lru"]
media = ["serde", "dep:image", "dep:reqwest", "dep:thiserror"]
structured = ["dep:kalosm-sample"]

[package.metadata.docs.rs]
# Features to pass to Cargo (default: [])
features = ["remote", "structured"]
