[package]
name = "kalosm-llama"
version = "0.4.1"
edition = "2021"
description = "A simple interface for Llama models"
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
keywords = ["llm", "llama", "mistral", "agents", "nlp"]

[dependencies]
fusor = { workspace = true, default-features = false }
fusor-gguf = { workspace = true }
kalosm-tokenizer.workspace = true

ahash = "0.8.12"
half = { version = "2.3.1" }

tracing = "0.1.37"
rand.workspace = true
rayon = { version = "1.8.0" }
kalosm-sample = { workspace = true, optional = true }
kalosm-language-model = { workspace = true, features = ["serde"] }
kalosm-model-types.workspace = true
kalosm-common = { workspace = true }
thiserror.workspace = true
minijinja = { version = "2.5.0", features = ["json", "loader"] }
minijinja-contrib = { version = "2.5.0", features = ["pycompat"] }
chrono = "0.4.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.139"
futures = "0.3.31"
pollster = { version = "0.4", optional = true }
regex = "1"
tokenizers = { workspace = true, features = ["fancy-regex"], optional = true }

image = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tracing-subscriber = "0.3.18"
pretty_assertions = "1.4.1"
kalosm = { workspace = true, features = [
    "language",
    "structured",
], default-features = true }
anyhow.workspace = true
kalosm-streams.workspace = true
reqwest = { version = "0.12" }

[features]
default = ["cpu", "gpu"]
cpu = ["fusor/cpu"]
gpu = ["fusor/gpu"]
vision = ["dep:image", "dep:pollster", "kalosm-language-model/media"]
structured = ["dep:kalosm-sample", "kalosm-language-model/structured"]
hf-tokenizer-json = ["dep:tokenizers", "dep:getrandom"]

[[example]]
name = "structured"
required-features = ["structured"]
