[package]
name = "kalosm-llama"
version = "0.4.1"
edition = "2021"
description = "A simple interface for Llama models"
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
keywords = ["llm", "llama", "mistral", "agents", "nlp"]

[dependencies]
fusor = { workspace = true, default-features = false }
fusor-gguf = { workspace = true }
kalosm-tokenizer.workspace = true

half = { version = "2.3.1" }

tracing = "0.1.37"
rand.workspace = true
rayon = { version = "1.8.0", optional = true }
kalosm-sample = { workspace = true, optional = true }
kalosm-language-model = { workspace = true, features = ["serde"] }
kalosm-model-types.workspace = true
kalosm-common = { workspace = true }
thiserror.workspace = true
minijinja = { version = "2.5.0", features = ["loader"] }
minijinja-contrib = { version = "2.5.0", features = ["pycompat"] }
chrono = { version = "0.4.41", default-features = false, features = ["now", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.139", optional = true }
futures-util = { workspace = true }
futures-channel = { workspace = true }
pollster = { version = "0.4", optional = true }
regex = "1"
tokenizers = { workspace = true, features = ["fancy-regex"], optional = true }

image = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }

[dev-dependencies]
ahash = "0.8.12"
pollster = "0.4"
tracing-subscriber = "0.3.18"
pretty_assertions = "1.4.1"
kalosm = { workspace = true, features = [
    "language",
    "structured",
], default-features = true }
anyhow.workspace = true
kalosm-streams.workspace = true
reqwest = { version = "0.12" }

[features]
default = ["gpu"]
cpu = ["fusor/cpu"]
gpu = ["fusor/gpu"]
chat-template-json = ["minijinja/json"]
hf-config-json = ["dep:serde_json"]
vision = ["dep:image", "dep:pollster", "kalosm-language-model/media"]
structured = ["dep:kalosm-sample", "kalosm-language-model/structured", "dep:rayon"]
hf-tokenizer-json = ["dep:tokenizers", "dep:getrandom"]

[[example]]
name = "structured"
required-features = ["structured"]
