[package]
name = "kalosm-tokenizer"
version = "0.4.0"
edition = "2021"
description = "Minimal byte-level BPE tokenization for Kalosm GGUF models"
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]

[dependencies]
rustc-hash = "2.1"
thiserror.workspace = true
