[package]
name = "rgliner"
version = "0.4.0"
edition = "2021"
description = "GLiNER bi-encoder Named Entity Recognition for Rust"
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
keywords = ["ai", "ner", "nlp", "gliner", "transformers"]

[dependencies]
fusor = { workspace = true }
fusor-core = { workspace = true }
fusor-gguf = { workspace = true }
tokenizers = { workspace = true, features = ["fancy-regex"] }
thiserror.workspace = true
rbert = { workspace = true }

tracing = "0.1.37"
serde_json = "1.0.106"
serde = { version = "1", features = ["derive"] }

kalosm-common = { workspace = true }
kalosm-model-types.workspace = true
kalosm-language-model.workspace = true
pollster = "0.4.0"

[dev-dependencies]
anyhow.workspace = true
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }

[features]
default = ["tokio"]
tokio = ["kalosm-common/tokio"]
