[package]
name = "segment-anything-rs"
version = "0.5.0"
edition = "2021"
description = "A simple interface for Segment Anything models "
license = "MIT/Apache-2.0"
repository = "https://github.com/floneum/floneum"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]
keywords = ["ai", "segment-anything", "segmentation", "computer-vision"]

[dependencies]
fusor = { workspace = true, features = ["cpu", "gpu"] }
kalosm-common = { workspace = true }
kalosm-model-types.workspace = true
thiserror.workspace = true
image.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
