[package]
name = "phase-token-prototype"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
doctest = true

[dependencies]
bytemuck = "1.25.0"
naga = { git = "https://github.com/ealmloff/wgpu", branch = "yield-now", package = "naga" }
pollster = "0.4.0"
wgpu = { git = "https://github.com/ealmloff/wgpu", branch = "yield-now", features = ["naga-ir", "static-dxc"] }
