[package]
name = "phase-token-prototype"
version = "0.1.0"
edition = "2021"
publish = false
autoexamples = false

[[example]]
name = "tile_ir"
path = "examples/tile_ir.rs"

[[example]]
name = "bench_tile_softmax"
path = "examples/bench_tile_softmax.rs"

[[example]]
name = "bench_qmatmul"
path = "examples/bench_qmatmul.rs"

[dependencies]
bytemuck = "1.25.0"
half = "2.4.1"
naga = { git = "https://github.com/ealmloff/wgpu", branch = "yield-now", package = "naga" }
pollster = "0.4.0"
wgpu = { git = "https://github.com/ealmloff/wgpu", branch = "yield-now", features = ["naga-ir", "static-dxc"] }
